--- a/app/assets/stylesheets/admin/skin.css
+++ b/app/assets/stylesheets/admin/skin.css
@@ -198,7 +198,7 @@ table.content td.down {
 }
 
 a.change {
-        background: url(/images/admin/change.gif) no-repeat 0 0;
+        background: url(/assets/admin/change.gif) no-repeat 0 0;
         height:27px;
         margin:5px 0 0px;
         width:280px;
@@ -206,15 +206,15 @@ a.change {
 
 ul.choices li a {
         color:#000;
-        background: url(/images/admin/media.gif) no-repeat 0 0;
+        background: url(/assets/admin/media.gif) no-repeat 0 0;
 }
 
 ul.choices li a.button {
-        background: url(/images/admin/nav.gif) no-repeat 0 0;
+        background: url(/assets/admin/nav.gif) no-repeat 0 0;
 }
 
 ul.choices li a.up.button {
-        background: url(/images/admin/nav-2.gif) no-repeat 0 -44px;
+        background: url(/assets/admin/nav-2.gif) no-repeat 0 -44px;
 }
 
   ul.choices li a.up.button:hover  {
@@ -310,7 +310,7 @@ ul.choices li a:hover {
 }
 
 #tags a, div.tags a {
-        background:#fff url(/images/admin/tag.png) no-repeat -3px -2px;
+        background:#fff url(/assets/admin/tag.png) no-repeat -3px -2px;
         color:#000;
 }
 
@@ -335,7 +335,7 @@ ul.choices li a:hover {
 
 .pagination .previous_page,
 .pagination .next_page {
-        background:url("/images/admin/pagination.gif") no-repeat scroll;
+        background:url("/assets/admin/pagination.gif") no-repeat scroll;
 
 }
 
@@ -358,7 +358,7 @@ ul.choices li a:hover {
 /* -------------- TABLE ICONS -------------- */
 
 a.edit, span.edit {
-        background:url(/images/admin/edit.png) no-repeat right -4px;
+        background:url(/assets/admin/edit.png) no-repeat right -4px;
 }
 
   a.edit:hover, span.edit:hover {
@@ -366,7 +366,7 @@ a.edit, span.edit {
   }
 
 a.delete, span.delete {
-        background:url(/images/admin/delete.png) no-repeat -1px -4px;
+        background:url(/assets/admin/delete.png) no-repeat -1px -4px;
 }
 
 td.spam {
@@ -374,42 +374,42 @@ td.spam {
 }
 
 td.spam.flagged {
-  background:url(/images/admin/spam-flag.png) no-repeat 8px 8px;
+  background:url(/assets/admin/spam-flag.png) no-repeat 8px 8px;
 }
 
 a.download {
-  background:url(/images/admin/download.png) no-repeat -1px -4px;
+  background:url(/assets/admin/download.png) no-repeat -1px -4px;
 }
 
 a.show {
-  background:url(/images/admin/view.png) no-repeat -1px -4px;
+  background:url(/assets/admin/view.png) no-repeat -1px -4px;
 }
 
 a.page_up {
-  background:url(/images/admin/up.png) no-repeat -1px -4px;
+  background:url(/assets/admin/up.png) no-repeat -1px -4px;
 }
 
 a.page_down {
-  background:url(/images/admin/down.png) no-repeat -1px -4px;
+  background:url(/assets/admin/down.png) no-repeat -1px -4px;
 }
 
 span.check {
-  background:url(/images/admin/check.png) no-repeat -1px -4px;
+  background:url(/assets/admin/check.png) no-repeat -1px -4px;
 }
 
 span.hidden {
-  background:url(/images/admin/hidden.png) no-repeat -1px -4px;
+  background:url(/assets/admin/hidden.png) no-repeat -1px -4px;
 }
 
 a.child, a.add{
-  background:url(/images/admin/add.png) no-repeat -1px -4px;
+  background:url(/assets/admin/add.png) no-repeat -1px -4px;
 }
 
 #asset-browser.multi a.add {
-  background:url(/images/admin/select_image.gif) no-repeat 4px;
+  background:url(/assets/admin/select_image.gif) no-repeat 4px;
 }
 #asset-browser.multi a.add.selected {
-  background:url(/images/admin/select_image.gif) no-repeat -22px;
+  background:url(/assets/admin/select_image.gif) no-repeat -22px;
 }
 a.delete:hover,
 span.delete:hover,
@@ -434,7 +434,7 @@ td.file:hover a.show {
 td.file:hover {cursor:pointer;}
 
 th.sort a {
-          background:url(/images/admin/sort.png) no-repeat right 1px !important;
+          background:url(/assets/admin/sort.png) no-repeat right 1px !important;
           padding:10px 42px 10px 0;
 }
 
@@ -444,7 +444,7 @@ th.sort a:hover {
 }
 
 .edit-item {
-          background:url(/images/admin/edit.gif) no-repeat;
+          background:url(/assets/admin/edit.gif) no-repeat;
           width:89px;
           height:26px;
           position:absolute;
@@ -536,13 +536,13 @@ table#node_body_tbl,
 
 span.tooltip,
 #content form .fixed-form span.tooltip {
-        background:url(/images/admin/info.png) no-repeat center center;
+        background:url(/assets/admin/info.png) no-repeat center center;
         cursor:help;
 }
 
 a.tooltip,
 th .tooltip {
-        background:url(/images/admin/info-white.png) no-repeat center center;
+        background:url(/assets/admin/info-white.png) no-repeat center center;
 }
 
 .tooltip-show {
@@ -552,15 +552,15 @@ th .tooltip {
 }
 
 /*.tooltip-top {
-        background:url(/images/admin/tooltip-top.png) no-repeat;
+        background:url(/assets/admin/tooltip-top.png) no-repeat;
 }
 
 .tooltip-middle {
-        background:url(/images/admin/tooltip-middle.png) repeat;
+        background:url(/assets/admin/tooltip-middle.png) repeat;
 }
 
 .tooltip-bottom {
-        background:url(/images/admin/tooltip-bottom.png) no-repeat;
+        background:url(/assets/admin/tooltip-bottom.png) no-repeat;
 }
 */
 
@@ -698,7 +698,7 @@ a:hover {
 
 /*download button*/
 #content form input.download-button{
-  background:url("/images/admin/nav.gif") no-repeat scroll 0 -88px transparent;
+  background:url("/assets/admin/nav.gif") no-repeat scroll 0 -88px transparent;
   border:0 none;
   color:#FFFFFF;
   font-size:0;
@@ -733,7 +733,7 @@ a:hover {
   float: left;
   padding: 0 0 0 10px;
   width: auto;
-  
+
 }
 
 .breadcrumb li a:after{
