--- a/app/views/noodall/admin/assets/form.html.erb
+++ b/app/views/noodall/admin/assets/form.html.erb
@@ -1,6 +1,4 @@
-<% content_for :header,  javascript_include_tag('admin/assets') if @asset.new_record? %>
-<% content_for :header, javascript_include_tag( 'admin/asset_edit' ) unless @asset.new_record? %>
-
+<% content_for :header, javascript_tag('setUpAssets()') unless @asset.new_record? %>
 
 <h1><%= @asset.new_record? ? 'New' : 'Editing' %> Asset</h1>
 
