--- a/app/views/noodall/admin/nodes/show.html.erb
+++ b/app/views/noodall/admin/nodes/show.html.erb
@@ -26,7 +26,7 @@
     </p>
 
     <p>
-      <span class="tooltip" title="Enter a comma seperated list of keywords to describe this content.&quot;website,launch,event&quot;">&nbsp;</span>
+      <span class="tooltip" title="Enter a comma separated list of keywords (e.g: one, two, three) or choose from the popular keywords to best describe this content">&nbsp;</span>
       <%= f.label :keywords, "Keywords" %><br/>
       <span class="input-wrap">
         <%= f.text_field :keywords, :class => "keywords-completer" %><br/>
