--- a/app/views/noodall/admin/nodes/show.html.erb
+++ b/app/views/noodall/admin/nodes/show.html.erb
@@ -30,7 +30,7 @@
       <%= f.label :keywords, "Keywords" %><br/>
       <span class="input-wrap">
         <%= f.text_field :keywords, :class => "keywords-completer" %><br/>
-        <span class="tags"><strong>Popular Tags: </strong><%= popular_tags %></span>
+        <span class="tags"><strong>Popular Keywords: </strong><%= popular_tags %></span>
       </span>
     </p>
 
