Copy change for asset tag tooltip

--- a/app/views/noodall/admin/assets/_form.html.erb
+++ b/app/views/noodall/admin/assets/_form.html.erb
@@ -27,7 +27,7 @@
     <span class="input-wrap"><%= f.file_field :file %></span>
   </p>
   <p>
-    <span class="tooltip" title="Enter some tags for this asset">&nbsp;</span>
+    <span class="tooltip" title="Enter some tags (comma separated) for this asset">&nbsp;</span>
     <%= f.label :tag_list, "Tags" %><br/>
     <span class="input-wrap"><%= f.text_field :tag_list %></span>
   </p>
