Show all items, but only allow selection of allowed types

--- a/app/views/noodall/admin/nodes/_branch.html.erb
+++ b/app/views/noodall/admin/nodes/_branch.html.erb
@@ -1,10 +1,15 @@
 <ol class="tree">
 <% for node in nodes %>
-  <li><%= link_to h( node.title), node_path(node), :id => "id-#{node.id}" %>
-<% unless (children = node.children.where(options)).empty? -%>
-  <span class="expand">+</span>
-  <%= render :partial => 'branch', :locals => { :nodes => children, :options => options } %>
-<% end -%>
+  <li>
+    <% if params[:allowed_types].include?(node.class.to_s) && node.id != params[:not_branch] && !node.path.include?(params[:not_branch]) %>
+      <%= link_to h(node.title), node_path(node), :id => "id-#{node.id}" %>
+    <% else %>
+      <%= node.title %>
+    <% end %>
+    <% unless (children = node.children.where(options)).empty? -%>
+      <span class="expand">+</span>
+      <%= render :partial => 'branch', :locals => { :nodes => children, :options => options } %>
+    <% end -%>
   </li>
 <% end -%>
 </ol>
