Fix syntax error on tree view

--- a/app/views/noodall/admin/nodes/tree.html.erb
+++ b/app/views/noodall/admin/nodes/tree.html.erb
@@ -1,3 +1,3 @@
 <h1>Tree</h1>
 
-<%= render :partial => 'branch', :locals => { :nodes => Noodall:Node.roots(@options), :options => @options } %>
+<%= render :partial => 'branch', :locals => { :nodes => Noodall::Node.roots(@options), :options => @options } %>
